# sv_projects

./: .gitignore  workspace.code-workspace  workspace_rn.code-workspace
SoC/config/: set_var.sh
SoC/file_list/: src_files.f
SoC/pck_incl/: RISCV_pkg.sv  SoC_pkg.sv  Submodules.sv
SoC/sim/: sim_modelsim.sh  transcript  wave.do
bidirectional_protocol/: Makefile  wave.do
cpu/: readme.md
fulladder/: fulladder.sv  fulladder_tb.sv  script.sh  temp_script.sh
model_modelsim/file_list/: src_files.f
model_modelsim/sim/: sim_modelsim.sh  transcript  vsim.wlf  wave.do
proba_visibilitat/config/: set_var.sh
proba_visibilitat/file_list/: src_files.f
proba_visibilitat/rtl/: interface.sv
proba_visibilitat/sim/: comp_transcript.txt  sim_modelsim.sh  transcript
rn/file_list/: file_list.f  verilator.f
rn/rtl/: cpu.sv  noc.sv  rn.sv  rn.sv.bak  sn.sv  transcript
rn/testb/: cpu_tb.sv  noc_tb.sv  transcript
script/check_updated_tests/rust/check_tests/: Cargo.toml  rustfmt.toml
script/check_updated_tests/rust/check_tests/.config/: nextest.toml
tools/: f1.txt  find.sh  find_map_sig.cpp  trace_signal.sh
tools/game/: compile.sh  game copy.cpp  game.cpp  map.m
tools/output/: asigned_sig.txt  finded_sig.txt  maping_sig.txt
tools/trace_signal/: compile.sh  trace_sig
uvm_model/scripts/: transcript  transcript.txt
uvm_model/src/: driver.sv  dut_top.sv  env.sv  seq.sv  sequencer.sv  testbench.sv  transaction_cnt_wrapper.sv  utils_pkg.sv  uvm_test_pkg.sv  v1_test.sv
uvm_model_singleton/scripts/: run.sh  transcript  wave.do
uvm_model_singleton/src/: driver.sv  (+5 more)
(+186 files in other folders)
