[package]
name = "check_tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_tests"
path = "src/main.rs"

[lib]
name = "check_tests"
path = "src/lib/lib.rs"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
